# CrackProtect

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: protect-any-binary.yml  qa.yml  release.yml
compiler/: CMakeLists.txt  main.cpp
docs/: BYPASS_ANALYSIS.md  ETHICAL_DISCLAIMER.md  PRODUCT_LAYER.md  TECHNIQUES.md  TESTING.md
examples/: compiler_skeleton.cpp  ilgui.cpp  ilprotect_cli.cpp  iltranspiler.cpp  main.cpp
examples/loader/: CMakeLists.txt  loader-ci.yml  loader.cpp
include/IronLock/: Obfuscation.h  ProtectionSDK.h
profiles/: qa-deterministic.json  release-hardened.yaml  safe-default.toml
src/: IronLock.cpp
src/asm/: DirectSyscall.asm
src/core/: Audit.cpp  Audit.h  CompilerEngine.cpp  Crypto.cpp  Crypto.h  Hashing.h  PolicyEngine.cpp  PolicyEngine.h  ProfileConfig.cpp  ProfileConfig.h  Randomizer.cpp  Randomizer.h  Resolver.cpp  Resolver.h  Response.cpp  Response.h  Syscalls.cpp  Syscalls.h  Utils.cpp  Utils.h
src/modules/anti_debug/: AntiDebug_Kernel.cpp  AntiDebug_Kernel.h  AntiDebug_User.cpp  AntiDebug_User.h
src/modules/anti_vm/: VMDetect.h  VMDetect_Generic.cpp  VMDetect_VendorSpecific.cpp
src/modules/antianalysis/: AntiAnalysis.cpp  AntiAnalysis.h
src/modules/cicd/: IronLockCICD.cpp  IronLockCICD.h
src/modules/integrity/: SelfChecksum.h
src/modules/licensing/: HWIDLicensing.cpp  HWIDLicensing.h
src/modules/llvm_plugin/: IronLockLLVMPlugin.cpp  IronLockLLVMPlugin.h
src/modules/memory/: AntiDump.cpp  BaitFunctions.cpp  Integrity.cpp  Integrity.h
src/modules/network/: CertStoreInspector.cpp  NetworkProtection.cpp  NetworkProtection.h  VpnDetector.cpp
src/modules/obfuscation/: ControlFlow.cpp  ControlFlow.h  ControlFlowFlattening.cpp  ControlFlowFlattening.h  TransformFramework.cpp  TransformFramework.h
src/modules/packer/: IATEncryption.cpp  IATEncryption.h  Packer.cpp  Packer.h  RuntimeStub.cpp  RuntimeStub.h
src/modules/polymorph/: Polymorph.cpp  Polymorph.h
src/modules/sandbox/: SandboxDetect.cpp  SandboxDetect.h
src/modules/tools/: ToolDetect.cpp  ToolDetect.h
src/modules/vm/: VirtualMachine.cpp  VirtualMachine.h
src/modules/vm/lifter/: FullX86Lifter.cpp  FullX86Lifter.h  IR.h  IRNormalizer.cpp  IRNormalizer.h  InstructionLifter.cpp  InstructionLifter.h  MixedExecution.cpp  MixedExecution.h  VMOpcodeModel.h  VirtualizationPass.cpp  VirtualizationPass.h
tests/fixtures/: detections.json  performance.json  scenario_results.json
tests/fixtures/packer/: README.md  pack-default.cfg
tests/fixtures/packer_samples/: cpp_exceptions_sample.json  relocation_heavy_sample.json  tls_sample.json
tests/fixtures/protected_bin/: integrity_markers.json  metadata.json  opcode_map.json  sections.json
tests/qa/: run_qa.py  scenario_matrix.yaml
tests/vm/: VirtualMachineTests.cpp  lifter_harness.cpp  msvc_patterns_corpus.md
